--- a/deployments/kubernetes/kustomize/base/django/deployment.yaml
+++ b/deployments/kubernetes/kustomize/base/django/deployment.yaml
@@ -18,21 +18,21 @@ spec:
           ports:
             - containerPort: 8000
               name: django
-#          env:
-#            - name: POSTGRES_USER
-#              valueFrom:
-#                secretKeyRef:
-#                  name: postgres-credentials
-#                  key: user
-#
-#            - name: POSTGRES_PASSWORD
-#              valueFrom:
-#                secretKeyRef:
-#                  name: postgres-credentials
-#                  key: password
-#
-#            - name: POSTGRES_HOST
-#              value: postgres-service
-#
-#            - name: REDIS_HOST
-#              value: redis-service
+          envFrom:
+          - configMapRef:
+              name: django-config
+          env:
+            - name: SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: django-secrets
+                  key: SECRET_KEY
+            - name: REDIS_PORT
+              value: "6379"
+            - name: REDIS_HOST
+              value: redis-service
+#            - name: ALLOWED_HOSTS
+#                valueFrom:
+#                  configMapKeyRef:
+#                    name: django-config
+#                    key: ALLOWED_HOSTS
