--- a/deployments/kubernetes/kustomize/base/kustomization.yaml
+++ b/deployments/kubernetes/kustomize/base/kustomization.yaml
@@ -2,5 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - config.yaml
   - django/service.yaml
   - django/deployment.yaml
+  - redis/service.yaml
+  - redis/deployment.yaml
